fix, add padding to #key to stop overlapping on smaller viewports

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@ footer {
 
 #key {
     width: 95%;
+    margin-bottom: 1.5rem;
 }
 /*--- cards---*/
 
